--- a/DemoMovieStore/MovieItemCell.xib
+++ b/DemoMovieStore/MovieItemCell.xib
@@ -31,8 +31,8 @@
                         <constraint firstAttribute="width" secondItem="boc-yt-9bz" secondAttribute="height" multiplier="1:1" id="BAr-gV-Epm"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Release date:" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sd2-1o-I32">
-                    <rect key="frame" x="121" y="37" width="88" height="16"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" verticalHuggingPriority="251" text="Release date:" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sd2-1o-I32">
+                    <rect key="frame" x="121" y="37" width="79.5" height="16"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -51,15 +51,6 @@
                     <color key="shadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aCB-UV-64W">
-                    <rect key="frame" x="213" y="37" width="65" height="16"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="65" id="ut0-0k-KWn"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
-                    <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hQl-sI-WJq">
                     <rect key="frame" x="337" y="30" width="30" height="30"/>
                     <rect key="contentStretch" x="1" y="1" width="0.0" height="0.0"/>
@@ -69,23 +60,23 @@
                     </constraints>
                     <state key="normal" backgroundImage="ic_star_border"/>
                     <connections>
-                        <action selector="addMovieFavorite:" destination="iN0-l3-epB" eventType="touchUpInside" id="fQb-2O-Ode"/>
+                        <action selector="btnStartButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="qfI-To-HMo"/>
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating:" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y6G-Na-5gs">
-                    <rect key="frame" x="121" y="61" width="41.5" height="16"/>
+                    <rect key="frame" x="121" y="61" width="42" height="16"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="59h-Fl-360">
-                    <rect key="frame" x="166.5" y="61" width="32" height="16"/>
+                    <rect key="frame" x="167" y="61" width="32" height="16"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                     <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/10" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bjf-2r-qCE">
-                    <rect key="frame" x="198.5" y="61" width="19" height="16"/>
+                    <rect key="frame" x="199" y="61" width="19" height="16"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                     <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -102,48 +93,57 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="X1q-V2-pNW">
+                    <rect key="frame" x="204.5" y="37.5" width="33" height="16"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="59h-Fl-360" firstAttribute="leading" secondItem="Y6G-Na-5gs" secondAttribute="trailing" constant="4" id="0Ji-Mr-W0e"/>
-                <constraint firstItem="aCB-UV-64W" firstAttribute="leading" secondItem="Sd2-1o-I32" secondAttribute="trailing" constant="4" id="2uS-jk-SRJ"/>
-                <constraint firstItem="aCB-UV-64W" firstAttribute="centerY" secondItem="Sd2-1o-I32" secondAttribute="centerY" id="7Zz-ug-r9i"/>
                 <constraint firstAttribute="trailing" secondItem="hQl-sI-WJq" secondAttribute="trailing" constant="8" id="9tD-WA-dl6"/>
                 <constraint firstItem="59h-Fl-360" firstAttribute="top" secondItem="Sd2-1o-I32" secondAttribute="bottom" constant="8" id="Ace-eN-kga"/>
                 <constraint firstItem="boc-yt-9bz" firstAttribute="top" secondItem="AHc-Z6-IS4" secondAttribute="bottom" constant="8" id="BTe-DA-ZAQ"/>
                 <constraint firstItem="fZl-Nk-kEC" firstAttribute="top" secondItem="2B2-Cy-tml" secondAttribute="bottom" constant="8" id="E9M-Ew-Ov2"/>
                 <constraint firstItem="fZl-Nk-kEC" firstAttribute="leading" secondItem="boc-yt-9bz" secondAttribute="trailing" constant="9" id="Ebt-mc-ZJg"/>
-                <constraint firstItem="Bjf-2r-qCE" firstAttribute="top" secondItem="aCB-UV-64W" secondAttribute="bottom" constant="8" id="Eok-Q1-yrv"/>
                 <constraint firstItem="Y6G-Na-5gs" firstAttribute="leading" secondItem="boc-yt-9bz" secondAttribute="trailing" constant="8" id="GVd-Fc-a2d"/>
                 <constraint firstAttribute="trailing" secondItem="AHc-Z6-IS4" secondAttribute="trailing" constant="8" id="Hjy-O4-occ"/>
+                <constraint firstItem="Bjf-2r-qCE" firstAttribute="baseline" secondItem="59h-Fl-360" secondAttribute="baseline" id="Icw-Nm-8Mf"/>
                 <constraint firstItem="2B2-Cy-tml" firstAttribute="top" secondItem="59h-Fl-360" secondAttribute="bottom" constant="8" id="InQ-nB-akf"/>
+                <constraint firstItem="sFl-W0-b3L" firstAttribute="leading" secondItem="X1q-V2-pNW" secondAttribute="trailing" priority="99" constant="4" id="JL1-HY-QlD"/>
+                <constraint firstItem="hQl-sI-WJq" firstAttribute="leading" secondItem="X1q-V2-pNW" secondAttribute="trailing" priority="1" constant="4" id="LLT-Tz-hfL"/>
                 <constraint firstItem="hQl-sI-WJq" firstAttribute="centerY" secondItem="Sd2-1o-I32" secondAttribute="centerY" id="MAs-Cv-AU5"/>
                 <constraint firstItem="2B2-Cy-tml" firstAttribute="leading" secondItem="boc-yt-9bz" secondAttribute="trailing" constant="8" id="SBh-Ul-d4Q"/>
                 <constraint firstItem="Sd2-1o-I32" firstAttribute="leading" secondItem="boc-yt-9bz" secondAttribute="trailing" constant="8" id="TA4-TT-M2X"/>
+                <constraint firstItem="X1q-V2-pNW" firstAttribute="leading" secondItem="Sd2-1o-I32" secondAttribute="trailing" constant="4" id="WFe-o7-eLX"/>
                 <constraint firstAttribute="bottom" secondItem="fZl-Nk-kEC" secondAttribute="bottom" constant="8" id="YW1-j4-Kyz"/>
                 <constraint firstItem="boc-yt-9bz" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="f1m-ar-WNL"/>
                 <constraint firstItem="Y6G-Na-5gs" firstAttribute="top" secondItem="Sd2-1o-I32" secondAttribute="bottom" constant="8" id="f1w-ad-NBL"/>
                 <constraint firstItem="Sd2-1o-I32" firstAttribute="top" secondItem="AHc-Z6-IS4" secondAttribute="bottom" constant="8" id="gSr-z3-UFY"/>
+                <constraint firstItem="X1q-V2-pNW" firstAttribute="centerY" secondItem="Sd2-1o-I32" secondAttribute="centerY" id="gxy-Uy-yNu"/>
                 <constraint firstItem="AHc-Z6-IS4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="hYj-Xf-S5E"/>
                 <constraint firstItem="Bjf-2r-qCE" firstAttribute="leading" secondItem="59h-Fl-360" secondAttribute="trailing" id="hy6-f3-g7q"/>
                 <constraint firstItem="AHc-Z6-IS4" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="kLX-pP-1Vj"/>
                 <constraint firstItem="sFl-W0-b3L" firstAttribute="centerY" secondItem="Sd2-1o-I32" secondAttribute="centerY" id="lfx-2R-gaU"/>
                 <constraint firstAttribute="trailing" secondItem="fZl-Nk-kEC" secondAttribute="trailing" constant="8" id="lkv-Mb-DCc"/>
                 <constraint firstItem="hQl-sI-WJq" firstAttribute="leading" secondItem="sFl-W0-b3L" secondAttribute="trailing" constant="8" id="q42-JG-Ux1"/>
-                <constraint firstItem="sFl-W0-b3L" firstAttribute="leading" secondItem="aCB-UV-64W" secondAttribute="trailing" constant="4" id="wYl-Ei-aqi"/>
                 <constraint firstAttribute="bottom" secondItem="boc-yt-9bz" secondAttribute="bottom" constant="8" id="ycW-1J-bir"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="adult" destination="sFl-W0-b3L" id="dyf-BN-q7k"/>
                 <outlet property="btnStart" destination="hQl-sI-WJq" id="Pdm-dC-K9x"/>
+                <outlet property="constraintBetweenTxtReleaseDateAndBtnAdult" destination="JL1-HY-QlD" id="VTi-oy-ZGA"/>
+                <outlet property="constraintBetweenTxtReleaseDateAndBtnStart" destination="LLT-Tz-hfL" id="lep-gp-Fhg"/>
                 <outlet property="movieImage" destination="boc-yt-9bz" id="c2n-im-4Tr"/>
                 <outlet property="movieTitle" destination="AHc-Z6-IS4" id="cFB-wB-2eq"/>
                 <outlet property="overview" destination="fZl-Nk-kEC" id="im0-8b-nbT"/>
                 <outlet property="rating" destination="59h-Fl-360" id="2Gh-im-y1f"/>
-                <outlet property="releaseDate" destination="aCB-UV-64W" id="BPX-fq-Bte"/>
+                <outlet property="releaseDate" destination="X1q-V2-pNW" id="hlc-QM-92C"/>
             </connections>
-            <point key="canvasLocation" x="-409" y="32"/>
+            <point key="canvasLocation" x="-645" y="-232"/>
         </view>
     </objects>
     <resources>
