--- a/DemoMovieStore/MovieItemCell.xib
+++ b/DemoMovieStore/MovieItemCell.xib
@@ -51,7 +51,7 @@
                     <color key="shadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
-                <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hQl-sI-WJq">
+                <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hQl-sI-WJq">
                     <rect key="frame" x="337" y="30" width="30" height="30"/>
                     <rect key="contentStretch" x="1" y="1" width="0.0" height="0.0"/>
                     <constraints>
@@ -143,7 +143,7 @@
                 <outlet property="rating" destination="59h-Fl-360" id="2Gh-im-y1f"/>
                 <outlet property="releaseDate" destination="X1q-V2-pNW" id="hlc-QM-92C"/>
             </connections>
-            <point key="canvasLocation" x="-645" y="-232"/>
+            <point key="canvasLocation" x="-811" y="-254"/>
         </view>
     </objects>
     <resources>
